# salesdee

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  E2E_TEST_PLAN.md  Makefile  NEXT_STEPS.md  PLAN.md  PRODUCT.md  README.md  REQUIREMENTS.md  STATUS.md  VPS_DEPLOYMENT.md  conftest.py  coverage.json  dev.sh  manage.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml
apps/accounting/: admin.py  models.py
apps/accounts/: admin.py  forms.py  managers.py  models.py  totp.py  urls.py  views.py
apps/audit/: admin.py  models.py  services.py  urls.py  views.py
apps/billing/: admin.py  middleware.py  models.py  pdf.py  services.py  tasks.py  urls.py  views.py
apps/catalog/: admin.py  default_content.py  forms.py  models.py  public_site.py  urls.py  views.py
apps/core/: admin.py  context_processors.py  current_tenant.py  forms.py  home_queue.py  middleware.py  migrations_utils.py  models.py  notifications.py  permissions.py  tasks.py  urls.py  views.py
apps/crm/: admin.py  apps.py  dashboard.py  forms.py  models.py  reports.py  services.py  signals.py  urls.py  views.py
apps/integrations/: admin.py  ai.py  line.py  models.py  tasks.py  urls.py  views.py
apps/quotes/: admin.py  apps.py  forms.py  models.py  pdf.py  services.py  tasks.py  urls.py  views.py
config/: urls.py
design/: backoffice.html  tenant-site.html  website.html
discovery/: wandeedee-interview-short.md  wandeedee-interview.md
playwright-report/: index.html
scripts/: deploy.sh
specs/: brand-guide.html  design-deck.html  furniture-site.html  prd.md  quotation.html  salesdee-brand-guide.html  salesdee-design-deck.html  salesdee-pdf-and-line.html  salesdee-prd.md
static/: manifest.json  offline.html  sw.js
templates/: auth_base.html  base.html  web_base.html
tests/: test_smoke.py
(+276 files in other folders)
